assets/style.css
body {
  background-size: cover !important;
  color: white;
  min-height: 100vh;
}
h1 {
  font-size: 1.6rem;
}
h2 {
  font-size: 1.2rem;
}
h3 {
  font-size: 1.4rem;
}
h4 {
  font-size: 1.0rem;
  font-style: italic;
}
nav.navbar-inverse {
  background-color: rgba(0,45,90,0.75);
}
.navbar-brand.divider {
    border-right: 1px white solid;
    margin: 14px 1rem 14px 0;
    height: 28px;
    padding: 0;
}
#navbar-slogan {
  font-size: 16px;
  margin: 5px 0;
  vertical-align: middle;
}
.container {
  padding: 7em 0;
  text-align: center;
  max-width: 450px;
  box-sizing: content-box;
}
.hidden {
  display: none;
}
.btn-live {
  margin: -0.2em 0.3em 0;
  padding: 0.2em 0.6em;
}
.btn.btn-red {
  background: #d0011b;
  color: #fff;
  border: 2px solid #fff;
  animation-name: live-flash;
  animation-duration: 3s;
  animation-iteration-count: infinite;
}
@keyframes live-flash {
    0% {background-color: #d0011b;}
    25% {background-color: #d0011b;}
    50% {background-color: rgb(255, 83, 83);}
    75% {background-color: #d0011b;}
    100% {background-color: #d0011b;}
}
#show-title {
  background: rgba(0,40,129,0.5);
  padding: 1em;
}
#show-image {
  background-color: rgba(0,40,129,0.5);
  padding: 0;
}
#show-image img {
  width: 100%;
}
#show-player, a:nth-of-type(even) .stream-list-row {
  background: rgba(0,40,129,0.9);
  margin:0;
}
a:nth-of-type(odd) .stream-list-row {
  background: rgba(0,40,129,0.7);
  margin:0;
}
a .stream-list-row{
  color: #ffffff;
}
.stream-list-row span {
  color: #afd8ff;
  margin-left: 6px;
}

#show-player-play {
  vertical-align: middle;
  align-items: center;
  text-align: center;
  background: #001933;
  padding: 10px;
  font-size: 35px;
  text-align: center;
  cursor: pointer;
  margin: auto 0;
}
#show-player-text {
  vertical-align: middle;
  display: flex;
  align-items: center;
  text-align: center;
  padding: 10px 30px;
  font-weight: lighter;
  font-size: 20px;
}
#show-player audio {
  display:none;
}
#show-player-volume-container {
  vertical-align: middle;
  display: flex;               /* establish flex container */
  align-items: center;         /* vertically center flex items */
}

#volume{
  width:100%;
  margin-right:5px;
  background: rgba(255,255,255,.3);
  border-radius: 15px;
}
#volume-icon {
  font-size: 20px;
  margin-right: 10px;
}
/*Grabable volumeHandle*/
#volumeHandle{
  cursor: pointer;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  background: #fff;
}

/* Custom page footer */
.footer {
  padding: 20px 30px;
  font-size: 15px;
  color: #777;
  border-top: 3px solid #ddd;
  background: #e1e1e1;
  text-align: center;
}
.footer .navbar-left {
  margin-bottom: 10px;
}
.footer .navbar-left a:hover {
  text-decoration: none;
  color: rgb(0,45,90);
}

@media (max-width: 1600px) {
  .container {
    padding: 3em 0;
  }
}
@media (max-width: 768px) {
  .container {
    padding: 2em 0;
  }
  .full-player #show-image img {
    width:50%;
  }
}

.embedded-player #show-player-play {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  background-color: rgba(0,40,129,0.5);
  padding: 30px 33px;

}

